Fix body not forcing full height on smaller pages

--- a/app/assets/stylesheets/layouts/front.scss
+++ b/app/assets/stylesheets/layouts/front.scss
@@ -2,7 +2,8 @@
   Base
 *************************************/
 
-body {
+html, body {
+  height: 100%;
   font-family: 'Tangerine';
 }
 
@@ -13,12 +14,18 @@ body {
     }
 }
 
+body > .container-fluid {
+  flex-flow: column;
+  height: 100%;
+}
+
 /*************************************
   Nav
 *************************************/
 
 #primary-nav {
-  padding: 20px; 
+  padding: 20px;
+  flex: 0 0 auto;
 
   .navbar-brand {
     @media (max-width: 1199px) {
@@ -35,6 +42,10 @@ body {
       margin-left: 30px;
     }
   }
+}
+
+#content {
+  flex-grow: 1;
 }
 
 /*************************************
